...
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZ2-Ue-vLX">
                                                <rect key="frame" x="8" y="8" width="37" height="26"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUf-cX-IsU">
                                                        <rect key="frame" x="0.0" y="0.0" width="37" height="26"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="backRecipe"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="26" id="VSo-3K-PEo"/>
                                                            <constraint firstAttribute="width" constant="37" id="qua-fK-D5d"/>
                                                        </constraints>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain"/>
...
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="138" id="FYn-ra-fL9"/>
                                                    <constraint firstAttribute="width" constant="138" id="Wy8-Xa-Jls"/>
                                                    <constraint firstAttribute="height" constant="36" id="jT2-IG-Bam"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="14"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Ir a mapa">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <buttonConfiguration key="configuration" style="plain" title="Ir a mapa">
                                                    <fontDescription key="titleFontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="14"/>
                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </buttonConfiguration>
...
