...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G4V-5J-nPw">
                                        <rect key="frame" x="0.0" y="3.6666666666666661" width="21" height="19.333333333333336"/>
                                        <imageReference key="image" image="chevron.backward" catalog="system" symbolScale="small" renderingMode="original"/>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kdi-D8-vUC">
                                        <rect key="frame" x="0.0" y="0.0" width="37" height="26"/>
                                        <accessibility key="accessibilityConfiguration" identifier="backMap"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain"/>
                                        <connections>
                                            <action selector="back:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="kkO-Md-ZU3"/>
                                        </connections>
                                    </button>
...
